fixes overflow within notebook on small screens

--- a/evap/static/scss/components/_notebook.scss
+++ b/evap/static/scss/components/_notebook.scss
@@ -64,8 +64,8 @@
         }
 
         .notebook-card {
-            min-height: calc(45vh - (#{$spacer} * 1.5) * 2); //subtract spacer with padding
-            max-height: 43.5vh; //approximation for size needed in smallest window (50vh - (spacer + leeway))
+            max-height: calc(45vh - (#{$spacer} * 1.5) * 2); //subtract spacer with padding
+            min-height: 43.5vh; //approximation for size needed in smallest window (50vh - (spacer + leeway))
         }
     }
 }
